Bug 741358 - [fr] translate online survey for Firefox users
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103761 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/survey1.lang
+++ b/fr/survey1.lang
@@ -1,407 +1,305 @@
 # The strings below are for a survey that will be proposed to Firefox users, this survey will be on an external web service (no staging site for the moment). It also includes a few error messages at the end
 
-
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-
+Merci de nous aider dans cette recherche. Nous aimerions vous poser quelques questions sur votre utilisation d'Internet, en particulier sur le navigateur que vous utilisez. Le terme &laquo;&nbsp;navigateur&nbsp;&raquo; est le terme qui désigne le programme qui affiche les pages Web et vous permet de surfer sur Internet. Ce questionnaire devrait vous prendre environ 3 minutes.
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
-
+Dans quelle tranche d'âge vous situez-vous&nbsp;?
 
 ;16-24
-16-24
-
+16-24{ok}
 
 ;25-34
-25-34
-
+25-34{ok}
 
 ;35-44
-35-44
-
+35-44{ok}
 
 ;45-54
-45-54
-
+45-54{ok}
 
 ;55-64
-55-64
-
+55-64{ok}
 
 ;65+
-65+
-
+65+{ok}
 
 ;Please indicate your gender
-Please indicate your gender
-
+Merci d'indiquer votre sexe
 
 ;Male
-Male
-
+Masculin
 
 ;Female
-Female
-
+Féminin
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-
+Lesquels des navigateurs Web suivants utilisez-vous sur votre ordinateur de bureau ou portable, chez vous ou au travail&nbsp;?
 
 ;Apple Safari
-Apple Safari
-
+Apple Safari {ok}
 
 ;Google Chrome
-Google Chrome
-
+Google Chrome{ok}
 
 ;Microsoft Internet Explorer
-Microsoft Internet Explorer
-
+Microsoft Internet Explorer{ok}
 
 ;Mozilla Firefox
-Mozilla Firefox
-
+Mozilla Firefox{ok}
 
 ;Opera
-Opera
-
+Opera{ok}
 
 ;Another browser
-Another browser
-
+Un autre navigateur
 
 ;Don’t know
-Don’t know
-
+Je ne sais pas
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
-
+Quelle est la probabilité que vous recommandiez Firefox à un ami ou un collègue&nbsp;?
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
-
+Il est très probable que je le recommande sans qu'on me le demande
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
-
+Il est probable que je recommanderais Firefox si on me demandait
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
-
+Je ne sais pas
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
-
+Il est peu probable que je recommande Firefox
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-
+Il est très peu probable que je recommande Firefox et recommanderais même plutôt de ne pas l'utiliser
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
-
+À quel point appréciez-vous Firefox&nbsp;?
 
 ;Dislike a great deal
-Dislike a great deal
-
+Je le déteste
 
 ;Dislike a little
-Dislike a little
-
+Je ne l'aime guère
 
 ;Neither like nor dislike
-Neither like nor dislike
-
+Ça m'indiffère
 
 ;Like a little
-Like a little
-
+Je l'apprécie un peu
 
 ;Like a great deal
-Like a great deal
-
+Je l'apprécie énormément
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-
+Dans l'ensemble, en prenant tout en compte, êtes-vous satisfaits de Firefox&nbsp;?
 
 ;Extremely dissatisfied
-Extremely dissatisfied
-
+Très insatisfait
 
 ;Dissatisfied
-Dissatisfied
-
+Insatisfait
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
-
+Plutôt insatisfait
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
-
+Ni satisfait ni insatisfait
 
 ;Somewhat satisfied
-Somewhat satisfied
-
+Plutôt satisfait
 
 ;Satisfied
-Satisfied
-
+Satisfait
 
 ;Extremely satisfied
-Extremely satisfied
-
+Extrêmement satisfait
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
-
+Pour chacune des phrases suivantes, pouvez-vous dire si vous&nbsp;:
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
-
+En étiez conscient et croyez que c'est vrai
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
-
+L'aviez vu mais n'étiez pas sûr que c'était vrai
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
-
+N'en aviez jamais entendu parler auparavant, ou ne savez pas
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
-
+Il n'y a pas de bonne ou de mauvaise réponse, donc s'il vous plait répondez le plus honnêtement possible
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
-
+A. Firefox est développé par Mozilla
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
-
+B. Mozilla est une organisation à but non lucratif
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
-
+C. La mission de Mozilla est de rendre le Web meilleur
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
-
+D. Firefox a été le premier navigateur Web
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
-
+Quel est votre favori parmi les navigateurs suivants&nbsp;?
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
-
+Parmi ces services offerts par Firefox, desquels aviez-vous déjà entendu parler&nbsp;?
 
 ;Firefox Sync
-Firefox Sync
-
+Firefox Sync{ok}
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-
+Un service qui vous donne un accès sécurisé à vos signets, vos onglets ouverts et votre historique de navigation à partir de n'importe quel ordinateur ou smartphone
 
 ;Firefox for Android
-Firefox for Android
-
+Firefox pour Android
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
-
+Le navigateur Firefox sur un téléphone ou une tablette Android
 
 ;Mozilla Persona
-Mozilla Persona
-
+Mozilla Persona{ok}
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
-
+Un système de gestion de votre identité qui vous permet de vous connecter
 
 ;Mozilla Marketplace
-Mozilla Marketplace
-
+Mozilla Marketplace{ok}
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
-
+La boutique en ligne d'applications Web ouvertes de Mozilla
 
 ;Addons for Firefox
-Addons for Firefox
-
+Les extensions Firefox
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
-
+Les personnalisations que vous pouvez appliquer à Firefox pour lui ajouter davantage de fonctionnalités
 
 ;None of these
-None of these
-
+Aucun de ces services
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
-
+Lesquels de ces services utilisez-vous actuellement&nbsp;?
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
-
+À partir de ces descriptions, lesquels pourriez-vous utiliser à l'avenir&nbsp;?
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
-
+Depuis à peu près combien de temps utilisez-vous Firefox&nbsp;?
 
 ;Up to 6 months
-Up to 6 months
-
+Moins de 6 mois
 
 ;6 months to a year
-6 months to a year
-
+Entre 6 mois et un an
 
 ;1 to 2 years
-1 to 2 years
-
+1 à deux ans
 
 ;2 to 3 years
-2 to 3 years
-
+2 à 3 ans
 
 ;3 to 4 years
-3 to 4 years
-
+3 à 4 ans
 
 ;4 to 5 years
-4 to 5 years
-
+4 à 5 ans
 
 ;More than 5 years
-More than 5 years
-
+Plus de 5 ans
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
-
+Qu'utilisez-vous pour naviguer sur Internet&nbsp;?
 
 ;Home PC or desktop computer
-Home PC or desktop computer
-
+Un ordinateur de bureau personnel
 
 ;Work PC or desktop computer
-Work PC or desktop computer
-
+Un ordinateur de bureau professionnel
 
 ;Home laptop
-Home laptop
-
+Un ordinateur portable personnel
 
 ;Work laptop
-Work laptop
-
+Un ordinateur portable professionnel
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
-
+Un smartphone (par example un iPhone ou un téléphone Android)
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
-
+Une tablette (par exemple un iPad)
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
-
+En moyenne, combien d'heures passez-vous chaque jour sur Internet ou le Web&nbsp;?
 
 ;Less than half an hour each day
-Less than half an hour each day
-
+Moins d'une demi-heure par jour
 
 ;About an hour a day
-About an hour a day
-
+Environ une heure par jour
 
 ;2 hours a day
-2 hours a day
-
+2 heures par jour
 
 ;3 hours a day
-3 hours a day
-
+3 heures par jour
 
 ;4 hours a day
-4 hours a day
-
+4 heures par jour
 
 ;5 hours a day
-5 hours a day
-
+5 heures par jour
 
 ;More than 6 hours a day
-More than 6 hours a day
-
+Plus de 6 heures par jour
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
-
+Ce questionnaire est fini, merci du temps que vous y avez consacré
 
 ;Please enter a response
-Please enter a response
-
+Merci de saisir une réponse
 
 ;Illegal characters for single code input
-Illegal characters for single code input
-
+Caractères interdits pour un seul code de réponse attendue
 
 ;Illegal characters for multi code input
-Illegal characters for multi code input
-
+Caractères interdits pour un code multiple de réponse attendue
 
 ;Please enter numbers only
-Please enter numbers only
-
+Merci de ne saisir que des nombres
 
 ;Answer is outside of
-Answer is outside of
-
+La réponse va au-delà de
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
-
+Le code de réponse négatif ne peut pas être mêlé aux autres codes
 
 ;Too many replies maximum of …
-Too many replies maximum of …
-
+Trop de réponses, il en faut au maximum…
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
-
+Le nombre de réponses doit être exactement…
 
 ;Too many characters
-Too many characters
-
+Trop de caractères
 
 ;Illegal string for this template
-Illegal string for this template
-
+Chaîne interdite pour ce modèle
 
 ;Click here to go back into the survey
-Click here to go back into the survey
-
+Cliquez ici pour revenir au sondage
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
-
+Veuillez répondre à chaque question surlignée.
 
 ;Please select one answer only.
-Please select one answer only.
-
+Veuillez choisir une seule réponse
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
-
+Veuillez choisir autant de réponses que nécessaire.
 
