l10n: id, .lang file update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103762 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/id/survey1.lang
+++ b/id/survey1.lang
@@ -2,11 +2,11 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
+Terima kasih atas bantuan anda dalam riset ini. Kami hendak mengajukan beberapa pertanyaan tentang penggunaan internet, khususnya peramban yang anda gunakan untuk mengisi survey ini. Istilah peramban adalah nama dari aplikasi yang digunakan untuk menampilkan halaman web dan membuat anda bisa berselancar di internet. Survey ini bisa selesai dalam waktu sekitar 3 menit.
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
+Berapakah usia anda?
 
 
 ;16-24
@@ -34,20 +34,19 @@ Which of the following age bands do you fall into?
 
 
 ;Please indicate your gender
-Please indicate your gender
+Tolong sebutkan jenis kelamin anda
 
 
 ;Male
-Male
+Pria
 
 
 ;Female
-Female
+Wanita
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-
+Yang mana dari peramban-peramban di bawah ini yang anda gunakan di komputer desktop anda saat ini, dan juga saat di rumah ataupun di tempat kerja?
 
 ;Apple Safari
 Apple Safari
@@ -70,135 +69,131 @@ Opera
 
 
 ;Another browser
-Another browser
+Peramban lainnya
 
 
 ;Don’t know
-Don’t know
+Tidak tahu
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
+Berapa besar kemungkinan anda merekomendasikan Firefox kepada teman dan rekan anda?
 
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
-
+Saya lebih baik memberikan rekomendasi tanpa perlu ditanyakan
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
+Saya mungkin akan merekomendasikan Firefox apabila ditanyakan
 
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
+Tidak keduanya
 
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
-
+Saya sepertinya tidak akan merekomendasikan Firefox
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
+Saya tidak akan merekomendasikan Firefox dan lebih baik merekomendasikan untuk tidak menggunakan Firefox
 
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+Seberapa anda menyukai atau tidak menyukai Firefox?
 
 
 ;Dislike a great deal
-Dislike a great deal
+Sangat tidak suka
 
 
 ;Dislike a little
-Dislike a little
+Sedikit tidak suka
 
 
 ;Neither like nor dislike
-Neither like nor dislike
+Tidak keduanya
 
 
 ;Like a little
-Like a little
+Sedikit suka
 
 
 ;Like a great deal
-Like a great deal
+Sangat suka
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+Jadi secara keseluruhan, seberapa anda puas atau tidak puas dengan Firefox?
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
+Sangat tidak puas
 
 
 ;Dissatisfied
-Dissatisfied
+Tidak puas
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+Agak tidak puas
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+Tidak keduanya
 
 
 ;Somewhat satisfied
-Somewhat satisfied
+Agak puas
 
 
 ;Satisfied
-Satisfied
+Puas
 
 
 ;Extremely satisfied
-Extremely satisfied
+Sangat puas
 
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
+Dari pernyataan di bawah ini, bisakah anda menunjukkan yang manakah anda:
 
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
+Sadar akan hal ini dan percaya menjadi benar
 
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
+Pernah melihat ini tapi tidak yakin bahwa ini benar
 
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
+Tidak pernah mendengar tentang hal ini sampai hari ini, atau saya tidak tahu
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
+Tidak ada jawaban yang benar atau salah, jadi mohon untuk dijawab dengan sejujur-jujurnya
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox dibuat oleh Mozilla
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
-
+B. Mozilla adalah organisasi non-profit
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
-
+C. Misi Mozilla adalah untuk membuat web menjadi lebih baik
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox adalah browser yang paling pertama 
 
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
+Yang mana dari pilihan di bawah ini yang akan anda sebut sebagai browser pilihan anda?
 
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
+Layanan Firefox yang mana saja yang pernah anda dengar sampai hari ini?
 
 
 ;Firefox Sync
@@ -206,15 +201,15 @@ Firefox Sync
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
+Layanan yang memberikan anda akses yang aman ke bookmarks, open tabs, dan browsing history dari semua komputer ataupun smartphone yang menggunakan Firefox
 
 
 ;Firefox for Android
-Firefox for Android
+Firefox untuk Android
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+Peramban Firefox di ponsel pinter ataupun tablet android
 
 
 ;Mozilla Persona
@@ -222,139 +217,134 @@ Mozilla Persona
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
-
+Sebuah sistem indentitas yang mengijinkan anda untuk masuk ke dalam berbagai situs dengan menggunakan email yang anda pilih
 
 ;Mozilla Marketplace
 Mozilla Marketplace
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Mozilla's online store untuk Open Web apps
 
 
 ;Addons for Firefox
-Addons for Firefox
+Addons untuk Firefox
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
+Kostumisasi bisa membuat Firefox memiliki fungsi tambahan ke peramban
 
 
 ;None of these
-None of these
+Tidak dari semua ini
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
-
+Yang mana dari layanan Firefox berikut yang anda gunakan saat ini?
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
+Berdasarkan deskpripsi-deskripsi ini, jika ada, apakah anda akan tertarik menggunakan di masa depan?
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+Kira-kira sudah berapa lama anda menggunakan Firefox?
 
 
 ;Up to 6 months
-Up to 6 months
-
+Sekitar 6 bulan
 
 ;6 months to a year
-6 months to a year
+Sekitar 6 sampai 12 bulan
 
 
 ;1 to 2 years
-1 to 2 years
+1 sampai 2 tahun
 
 
 ;2 to 3 years
-2 to 3 years
+2 sampai 3 tahun
 
 
 ;3 to 4 years
-3 to 4 years
+3 sampai 4 tahun
 
 
 ;4 to 5 years
-4 to 5 years
+4 sampai 5 tahun
 
 
 ;More than 5 years
-More than 5 years
+Lebih dari 5 tahun
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+Apakah anda menggunakan salah satu dari di bawah ini untuk berselancar di internet
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+PC di rumah atau komputer desktop
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+PC di tempat kerja atau komputer desktop
 
 
 ;Home laptop
-Home laptop
+Laptop di rumah
 
 
 ;Work laptop
-Work laptop
+Laptop di tempat kerja
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+Ponsel pintar (misal. iPhone, Android)
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+Tablet (misal. iPad)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
-
+Kira-kira berapa jam setiap harinya anda berselancar di internet?
 
 ;Less than half an hour each day
-Less than half an hour each day
+Kurang dari setengah jam setiap hari
 
 
 ;About an hour a day
-About an hour a day
+Sekitar 1 jam setiap hari
 
 
 ;2 hours a day
-2 hours a day
+2 jam sehari
 
 
 ;3 hours a day
-3 hours a day
+3 jam sehari
 
 
 ;4 hours a day
-4 hours a day
+4 jam sehari
 
 
 ;5 hours a day
-5 hours a day
+5 jam sehari
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+Lebih dari 6 jam sehari
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+Itu adalah pertanyaan terakhir. Terima kasih atas waktu anda mengisi kuisioner ini.
 
 
 ;Please enter a response
-Please enter a response
-
+Mohon isi pendapat anda
 
 ;Illegal characters for single code input
-Illegal characters for single code input
+Tidak bisa mengisi hanya 1 karakter.
 
 
 ;Illegal characters for multi code input
@@ -362,46 +352,46 @@ Illegal characters for multi code input
 
 
 ;Please enter numbers only
-Please enter numbers only
+Mohon masukkan angka saja
 
 
 ;Answer is outside of
-Answer is outside of
+Jawaban keluar dari
 
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
+Tidak ada jawaban, tidak bisa dicampur dengan kode lainnya
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+Terlalu banyak balasan maksimum ...
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+Jumlah balasan harus tepat ...
 
 
 ;Too many characters
-Too many characters
+Terlalu banyak karakter
 
 
 ;Illegal string for this template
-Illegal string for this template
+String yang tidak sesuai untuk template ini
 
 
 ;Click here to go back into the survey
-Click here to go back into the survey
+Klik di sini untuk kembali ke survei
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+Mohon jawab pertanyaan-pertanyaan yang di highlight
 
 
 ;Please select one answer only.
-Please select one answer only.
+Mohon pilih 1 jawaban saja.
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+Silahkan pilih jawaban yang sesuai.
 
 
