translation for bug 741368
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103764 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-CN/survey1.lang
+++ b/zh-CN/survey1.lang
@@ -2,11 +2,11 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
+感谢您帮助进行此项调查。我们将会询问您一些有关互联网使用的问题，特别是有关您使用的浏览器软件。术语“浏览器”是一类应用软件的名称，这类软件显示网页页面并使你可以浏览网络。完成问卷大约需要3分钟的时间。
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
+您处于哪个年龄段？
 
 
 ;16-24
@@ -34,19 +34,19 @@ Which of the following age bands do you fall into?
 
 
 ;Please indicate your gender
-Please indicate your gender
+请说明您的性别
 
 
 ;Male
-Male
+男
 
 
 ;Female
-Female
+女
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+下列网络浏览器哪些是您的桌面电脑或者笔记本电脑此时正在使用的，无论在家还是在工作场所？
 
 
 ;Apple Safari
@@ -70,338 +70,338 @@ Opera
 
 
 ;Another browser
-Another browser
+其他浏览器
 
 
 ;Don’t know
-Don’t know
+不知道
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
+您有多乐意或者不乐意向朋友或者同事推荐 Firefox ?
 
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
+我非常乐意并且将会考虑主动推荐
 
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
+在被问到时我很乐意推荐 Firefox
 
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
+无所谓
 
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
+我很不乐意推荐 Firefox
 
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
+我很不乐意推荐 Firefox 甚至考虑反对使用 Firefox
 
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+你有多喜欢或者不喜欢 Firefox ？
 
 
 ;Dislike a great deal
-Dislike a great deal
+很不喜欢
 
 
 ;Dislike a little
-Dislike a little
+不怎么喜欢
 
 
 ;Neither like nor dislike
-Neither like nor dislike
+无所谓
 
 
 ;Like a little
-Like a little
+有点喜欢
 
 
 ;Like a great deal
-Like a great deal
+非常喜欢
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+整体而言，综合考虑各种因素，你对 Firefox 有多满意或者不满意？
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
+非常不满意
 
 
 ;Dissatisfied
-Dissatisfied
+不满意
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+略有不满
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+无所谓
 
 
 ;Somewhat satisfied
-Somewhat satisfied
+稍有好感
 
 
 ;Satisfied
-Satisfied
+满意
 
 
 ;Extremely satisfied
-Extremely satisfied
+非常满意
 
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
+对于以下每项陈述，请说明你是否：
 
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
+知道并且相信他是正确的
 
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
+看到过但不能确信他是否正确
 
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
+此前从未听说过，或者不知道
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
+答案没有对错之分，所以请尽量按照您的真实想法作答。
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox 由 Mozilla 开发
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
+B. Mozilla 是一个非盈利组织
 
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
+C. Mozilla 的使命是让网络变得更好
 
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox 是第一个网页浏览器
 
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
+你认为下列哪项是你的浏览器特别的地方？
 
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
+今天之前你听说过下列哪项 Firefox 服务？
 
 
 ;Firefox Sync
-Firefox Sync
+Firefox 同步
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
+这项服务使你可以从任何一台电脑或者智能手机的 Firefox 上安全地访问你的书签，打开的标签页以及浏览历史记录
 
 
 ;Firefox for Android
-Firefox for Android
+Firefox Android 版
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+适用于 Android 智能手机或者平板电脑的 Firefox
 
 
 ;Mozilla Persona
-Mozilla Persona
+Mozilla 角色
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
+一个身份验证系统，让你可以使用选定的一个电子邮件地址登录到网站。
 
 
 ;Mozilla Marketplace
-Mozilla Marketplace
+Mozilla 市场
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Mozilla 的开放网络应用在线商店
 
 
 ;Addons for Firefox
-Addons for Firefox
+Firefox 附加组件
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
+你可以为 Firefox 浏览器定制添加更多功能。
 
 
 ;None of these
-None of these
+以上都没听说过
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
+此刻你正在使用以下哪些 Firefox 服务？
 
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
+基于以上描述，如果有的话，你今后可能有兴趣使用吗？
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+你使用 Firefox 大约已经有多久了？
 
 
 ;Up to 6 months
-Up to 6 months
+至多6个月
 
 
 ;6 months to a year
-6 months to a year
+6个月到一年
 
 
 ;1 to 2 years
-1 to 2 years
+一到两年
 
 
 ;2 to 3 years
-2 to 3 years
+两到三年
 
 
 ;3 to 4 years
-3 to 4 years
+三到四年
 
 
 ;4 to 5 years
-4 to 5 years
+四到五年
 
 
 ;More than 5 years
-More than 5 years
+五年以上
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+你使用以下哪些设备上网？
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+家用PC或台式电脑
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+工作用PC或台式电脑
 
 
 ;Home laptop
-Home laptop
+家用笔记本电脑
 
 
 ;Work laptop
-Work laptop
+工作用笔记本电脑
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+智能手机（例如：iPhone，Android 手机）
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+平板电脑（例如：iPad）
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
+平均而言，你每天上网或者浏览网页多少个小时？
 
 
 ;Less than half an hour each day
-Less than half an hour each day
+一天少于半小时
 
 
 ;About an hour a day
-About an hour a day
+一天一小时
 
 
 ;2 hours a day
-2 hours a day
+一天两小时
 
 
 ;3 hours a day
-3 hours a day
+一天三小时
 
 
 ;4 hours a day
-4 hours a day
+一天四小时
 
 
 ;5 hours a day
-5 hours a day
+一天五小时
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+一天超过六小时
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+问卷结束，感谢您花费时间参与。
 
 
 ;Please enter a response
-Please enter a response
+请留下反馈
 
 
 ;Illegal characters for single code input
-Illegal characters for single code input
+单码输入有非法字符
 
 
 ;Illegal characters for multi code input
-Illegal characters for multi code input
+多码输入有非法字符
 
 
 ;Please enter numbers only
-Please enter numbers only
+请仅输入数字
 
 
 ;Answer is outside of
-Answer is outside of
+答案超出
 
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
+答案代码不能与其他代码混合
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+回答过多，最多 …
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+回答的数字必须是精确的 …
 
 
 ;Too many characters
-Too many characters
+字符过多
 
 
 ;Illegal string for this template
-Illegal string for this template
+对此模板无效的字符串
 
 
 ;Click here to go back into the survey
-Click here to go back into the survey
+点击这里返回调查
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+请回答高亮的问题
 
 
 ;Please select one answer only.
-Please select one answer only.
+请只选择一个答案。
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+请选择适合的尽可能多的答案。
 
 
